# uaView

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build-docker.yaml
uaView/: main.py  style.tcss
uaView/config/: settings.json
uaView/ua_client/: client.py  client_config.py
uaView/widgets/: address_space.py  attributes_view.py  connection_select.py  data_view.py  logs.py  settings_screen.py
